--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 # Your information
 email: baremaaime@gmail.com
 author: aime barema
-avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
+avatar: "https://github.com/baremaaime/baremaaime.github.io/blob/gh-pages/Aime%20Barema%20(Rwanda).JPG?raw=true"
 profile: I am not a compiler, please stop harrassing me.
 #twitter_username: twitter_username
 #github_username:  github_username
